# latexsnipper-core

./: .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  README-CN.md  README.md  README.zh-CN.md  SECURITY.md  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
crates/ast/: Cargo.toml
crates/ast/src/: block.rs  builder.rs  document.rs  formula.rs  geometry.rs  inline.rs  lib.rs  metadata.rs  operation.rs  span.rs  visitor.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs
crates/conversion/: Cargo.toml
crates/conversion/src/: converter.rs  document_converter.rs  html.rs  latex.rs  latex_ast.rs  latex_parser.rs  latex_to_typst.rs  latex_utils.rs  lib.rs  markdown.rs  markdown_parser.rs  mathml.rs  mathml_parser.rs  omml.rs  omml_parser.rs  typst.rs  typst_parser.rs
crates/engine/: Cargo.toml
crates/engine/src/: api.rs  config.rs  engine.rs  job.rs  lib.rs  service.rs
crates/export/: Cargo.toml
crates/export/src/: generator.rs  lib.rs  pdf.rs  render_tree.rs  svg.rs  text.rs
crates/ffi/: Cargo.toml
crates/ffi/src/: common.rs  lib.rs
crates/ffi/src/android/: jni_bridge.rs  mod.rs
crates/ffi/src/ios/: c_ffi.rs  mod.rs
crates/foundation/: Cargo.toml
crates/foundation/src/: config.rs  error.rs  event.rs  lib.rs  logging.rs
crates/image/: Cargo.toml
crates/image/src/: color.rs  decode.rs  image.rs  lib.rs  operations.rs  view.rs
crates/inference/: Cargo.toml
crates/inference/src/: formula_detector.rs  formula_lines.rs  formula_recognizer.rs  latex_repair.rs  lib.rs  text_detector.rs  text_recognizer.rs  text_segmentation.rs  trocr_tokenizer.rs  types.rs
crates/mock/: Cargo.toml
crates/mock/src/: fake_detector.rs  fake_document.rs  fake_pipeline.rs  fake_recognizer.rs  lib.rs
crates/model/: Cargo.toml
crates/model/src/: config.rs  lib.rs  manager.rs  manifest.rs
crates/pipeline/: Cargo.toml
crates/pipeline/src/: context.rs  formula_pipeline.rs  graph.rs  lib.rs  manifest.rs  mixed_pipeline.rs  node.rs  sdk.rs  simple.rs  text_pipeline.rs
crates/pipeline/src/nodes/: crop_node.rs  detector_node.rs  mod.rs  normalize_node.rs  postprocess_node.rs  recognizer_node.rs  resize_node.rs
crates/plugin/: Cargo.toml
crates/plugin/src/: lib.rs  plugin.rs  registry.rs  request.rs  response.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: acceleration.rs  backend.rs  lib.rs  model_handle.rs  session.rs  tensor.rs
crates/runtime/src/providers/: mod.rs
crates/runtime/src/providers/onnx/: backend.rs  mod.rs  platform.rs
crates/runtime/src/providers/stub/: mod.rs
crates/syntax/: Cargo.toml
crates/syntax/src/: latex.rs  lib.rs  markdown.rs  parser.rs  renderer.rs  typst.rs
crates/tensor/: Cargo.toml
crates/tensor/src/: lib.rs
crates/tests/: Cargo.toml
crates/tests/benches/: core_bench.rs  recognition_bench.rs
crates/tests/src/: all_tests.rs  contract_tests.rs  dual_track_tests.rs  pipeline_e2e.rs  pipeline_integration.rs  real_model_tests.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
docs/: architecture.md  ast.md  benchmark.md  cli.md  conversion.md  conversion_guide.md  dual-track.md  engine.md  export.md  ffi.md  foundation.md  getting-started.md  image.md  inference.md  mobile-integration.md  mock.md  model.md  models.md  pipeline.md  plugin.md  runtime.md  syntax.md  tensor.md  testing.md  wasm.md
examples/: ast_demo.rs  conversion_demo.rs  pipeline_demo.rs  sdk_demo.rs
models/: model-manifest.json
models/formula-det/yolov8-mfd/: config.json
models/formula-rec/trocr-deit/: config.json
models/text-det/v6-small/: config.json
models/text-rec/v6-small/: config.json
tests/: all_formats_test.rs  complex_formulas.rs  conversion_roundtrip.rs  integration.rs  library_coverage.rs  show_results.rs
