[package]
name = "latexsnipper-engine"
description = "Core engine — orchestrates all capabilities"
version.workspace = true
edition.workspace = true

[dependencies]
latexsnipper-foundation = { path = "../foundation" }
latexsnipper-ast = { path = "../ast" }
latexsnipper-image = { path = "../image" }
latexsnipper-runtime = { path = "../runtime" }
latexsnipper-inference = { path = "../inference" }
latexsnipper-pipeline = { path = "../pipeline" }
latexsnipper-model = { path = "../model" }
serde.workspace = true
serde_json.workspace = true
log.workspace = true
thiserror.workspace = true

[dev-dependencies]
latexsnipper-mock = { path = "../mock" }
latexsnipper-syntax = { path = "../syntax" }
latexsnipper-export = { path = "../export" }
tokio = { version = "1", features = ["full"] }
