[package]
name = "latexsnipper-image"
description = "Image processing capability — decode, transform, encode"
version.workspace = true
edition.workspace = true

[dependencies]
latexsnipper-foundation = { path = "../foundation" }
latexsnipper-ast = { path = "../ast" }
image = "0.25"
imageproc = "0.25"
ndarray = "0.16"
serde.workspace = true
serde_json.workspace = true
log.workspace = true
thiserror.workspace = true
