[package]
name = "latexsnipper-mock"
description = "Mock implementations for testing — FakeDetector, FakeRecognizer, FakePipeline"
version.workspace = true
edition.workspace = true

[dependencies]
latexsnipper-foundation = { path = "../foundation" }
latexsnipper-ast = { path = "../ast" }
latexsnipper-tensor = { path = "../tensor" }
latexsnipper-image = { path = "../image" }
latexsnipper-inference = { path = "../inference" }
latexsnipper-runtime = { path = "../runtime" }
serde.workspace = true
serde_json.workspace = true
log.workspace = true

[dev-dependencies]
serde_json.workspace = true
latexsnipper-syntax = { path = "../syntax" }
latexsnipper-export = { path = "../export" }
