[package]
name = "latexsnipper-syntax"
description = "Syntax layer — Parser + Renderer for LaTeX/OMML/Typst/Markdown"
version.workspace = true
edition.workspace = true

[dependencies]
latexsnipper-foundation = { path = "../foundation" }
latexsnipper-ast = { path = "../ast" }
serde.workspace = true
serde_json.workspace = true
log.workspace = true
thiserror.workspace = true

[dev-dependencies]
latexsnipper-mock = { path = "../mock" }
