[package]
name = "latexsnipper-wasm"
description = "WebAssembly bindings — run Core in browsers"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
latexsnipper-foundation = { path = "../foundation" }
latexsnipper-ast = { path = "../ast" }
latexsnipper-image = { path = "../image" }
latexsnipper-runtime = { path = "../runtime" }
latexsnipper-engine = { path = "../engine" }
latexsnipper-syntax = { path = "../syntax" }
latexsnipper-conversion = { path = "../conversion" }
serde_json.workspace = true
log.workspace = true
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[dev-dependencies]
wasm-bindgen-test = "0.3"
